[gd_scene load_steps=27 format=2]

[ext_resource path="res://Enemy/PinkBat/PinkBat.gd" type="Script" id=1]
[ext_resource path="res://Others/SoftCollision.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy/PlayerDetectionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy/WanderController.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemy/PinkBat/Bat.png" type="Texture" id=5]
[ext_resource path="res://Enemy/PinkBat/EnemyDeathEffect.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "death",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=21]
radius = 7.0
height = 10.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 35.0
height = 174.0

[sub_resource type="CircleShape2D" id=9]
radius = 4.0

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 2, 5 )

[node name="PinkBat" type="KinematicBody2D" groups=[
"Enemy",
]]
scale = Vector2( 1.2, 1.2 )
collision_layer = 16
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "run"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
position = Vector2( 0, -4 )
shape = SubResource( 21 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 3 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
rotation = 1.5708
shape = SubResource( 8 )

[node name="WanderController" parent="." instance=ExtResource( 4 )]
visible = false

[node name="SoftCollision" parent="." instance=ExtResource( 2 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, 11 )
shape = SubResource( 9 )

[node name="AttackArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 6, -4 )
shape = SubResource( 20 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.2
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_AttackArea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="PlayerDetectionZone"]

[editable path="SoftCollision"]
